--- a/ControllerAndroid/app/src/main/res/layout/activity_main.xml
+++ b/ControllerAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,37 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="vertical"
-    tools:context=".MainActivity" >
-
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:orientation="vertical" >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/title1"
+        android:textSize="20dp"
+        android:text="Time" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1"
+        android:text="" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/title2"
+        android:textSize="20dp"
+        android:text="Results" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/textView2"
+        android:layout_weight="1"
+        android:text="" />
     <Button
         android:id="@+id/btn1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="20dp"
         android:text="Begin computation"
-        android:onClick="onBeginClick"
-        android:textColor="@color/colorPrimary"
-        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
-        android:text="Results"
-        android:layout_height="wrap_content" />
-
+        android:onClick="onBeginClick" />
 </LinearLayout>
