--- a/ControllerDocker/app/src/main/res/layout/activity_main.xml
+++ b/ControllerDocker/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,10 @@
         android:id="@+id/textView2"
         android:layout_weight="1"
         android:text="" />
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
