--- a/ControllerDocker/app/src/main/res/layout/activity_main.xml
+++ b/ControllerDocker/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,24 @@
         android:id="@+id/textView2"
         android:layout_weight="1"
         android:text="" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/title4"
+        android:textSize="20dp"
+        android:text="Server" />
     <Spinner
         android:id="@+id/spinner1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/title5"
+        android:textSize="20dp"
+        android:text="Simulation" />
+    <Spinner
+        android:id="@+id/spinner2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
     <TextView
