--- a/ControllerDocker/app/src/main/res/layout/activity_main.xml
+++ b/ControllerDocker/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,24 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title1"
+        android:id="@+id/timeTitle1"
         android:textSize="20dp"
-        android:text="Time" />
+        android:text="Start Time" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
+        android:id="@+id/timeTextView1"
+        android:text="" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeTitle2"
+        android:textSize="20dp"
+        android:text="End time" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeTextView2"
         android:text="" />
     <TextView
         android:layout_width="match_parent"
